--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,9 +79,16 @@ h3{
 	background-color: white;
 }
 
+.bg-grey{
+	background-color: #e5e5e5;
+}
+
 .footer{
 	height: 60px;
 	width: 100%;
+	border-top: solid;
+	border-top-color: #4aaaa5;
+	border-top-width: 5px;
 	position: absolute;
 	bottom: 0;
 	line-height: 60px;
